--- a/ase-cleanup/Dockerfile
+++ b/ase-cleanup/Dockerfile
@@ -2,6 +2,8 @@ FROM python
 
 LABEL org.opencontainers.image.source https://github.com/icgc-argo-workflows/allele-specific-expression
 
+RUN pip install pandas scipy statsmodels
+
 ENV PATH="/tools:${PATH}"
 
 COPY *.py /tools/
