Move files to home in docker.

--- a/ase-cleanup/Dockerfile
+++ b/ase-cleanup/Dockerfile
@@ -16,12 +16,13 @@ ARG begraph_url=https://bismap.hoffmanlab.org/raw/hg38/k50.umap.bedgraph.gz
 
 COPY *.py /tools/
 WORKDIR /tools
-ADD $fai_url /tools/
-RUN awk -v OFS="\t" "{print \$1,\$2}" GRCh38_Verily_v1.genome.fa.gz.fai | sort -s > GRCh38_Verily_v1.genome.fa.gz.genome
-ADD $begraph_url /tools/ 
+ADD $fai_url /home/ubuntu
+RUN awk -v OFS="\t" "{print \$1,\$2}" /home/ubuntu/GRCh38_Verily_v1.genome.fa.gz.fai | sort -s > /home/ubuntu/GRCh38_Verily_v1.genome.fa.gz.genome
+ADD $begraph_url /home/ubuntu
+RUN chmod 644 /home/ubuntu/k50.umap.bedgraph.gz 
 
 # local test only
-# COPY k50.umap.bedgraph.gz /tools/k50.umap.bedgraph.gz
+# COPY k50.umap.bedgraph.gz /home/ubuntu/k50.umap.bedgraph.gz
 
 USER ubuntu
 ENTRYPOINT ["/usr/bin/env"]
